2010-01-11  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/bsd/bits/stat.h: Fix double-inclusion problem.
	* sysdeps/unix/sysv/linux/powerpc/bits/stat.h: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/bits/stat.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/bits/stat.h: Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/stat.h: Likewise.
	* sysdeps/unix/sysv/linux/bits/stat.h: Likewise.
	* sysdeps/unix/sysv/linux/ia64/bits/stat.h: Likewise.
	* sysdeps/unix/sysv/bits/stat.h: Likewise.
	* sysdeps/mach/hurd/bits/stat.h: Likewise.

	* bits/confname.h: Fix typo in last change.

	* conform/data/unistd.h-data: lockf-constants Not needed for POSIX.

2010-01-10  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/bits/sigaction.h: SA_RESTART, SA_NODEFER,
	and SA_RESETHAND now available in Base.
	* sysdeps/unix/sysv/linux/ia64/bits/sigaction.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/bits/sigaction.h: Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/sigaction.h: Likewise.
	* conform/data/signal.h-data: Update for XPG7.

	* posix/sys/types.h: Define id_t, clock_t, blksize_t for XPG7.

	* string/strings.h: Don't declare obsolete functions for XPG7.
	Declare ffs only for XSI.
	* conform/data/strings.h-data: Update for XPG7.

2010-01-10  Jakub Jelinek  <jakub@redhat.com>

	[BZ #11125]
	* libio/stdio.h: Define va_list, off_t, and ssize_t.

	* posix/glob.h: Define size_t.

	* posix/sys/wait.h: Define idtype_t and declare waitid for XPG7.

	* signal/signal.h: Define size_t, mcontext_t, and ucontext_t for XPG7.

2010-01-10  Ulrich Drepper  <drepper@redhat.com>

	* conform/conformtest.pl: For XPG7 testing the headers are supposed to
	be self-contained.

	* conform/data/stdio.h-data: Expect off_t and ssize_t.

2010-01-09  Ulrich Drepper  <drepper@redhat.com>

	* libio/stdio.h: Define va_list also for XPG7.

	* conform/conformtest.pl: Update for XPG7 and some bug fixes.
	* conform/data/ctype.h-data: Likewise.
	* conform/data/dirent.h-data: Likewise.